--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Maja\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\dreilinger.v.maja\\AppData\\Roaming\\NetBeans\\17\\build.properties
